Optimize WebSecurityConfig to accept railway public preprod request